force-app/main/default/objects/Lien__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Office__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>County Registrar</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Liens</relationshipLabel>
    <relationshipName>Liens</relationshipName>
    <type>Lookup</type>
</CustomField>