force-app/main/default/objects/Lien__c/fields/Date_Conformed_Recorded_Copy_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Conformed_Recorded_Copy_Received__c</fullName>
    <inlineHelpText>Date DLSE received conformed or recorded copy</inlineHelpText>
    <label>Date Conformed/Recorded Copy Received</label>
    <type>Date</type>
</CustomField>