force-app/main/default/objects/Lien__c/fields/Date_Mailed_Or_Lodged__c.field-meta.xml
<CustomField>
    <fullName>Date_Mailed_Or_Lodged__c</fullName>
    <inlineHelpText>Date sent or provided to recording agency</inlineHelpText>
    <label>Date Mailed Or Lodged</label>
    <type>Date</type>
</CustomField>