force-app/main/default/objects/Lien__c/fields/Judgment__c.field-meta.xml
<CustomField>
    <fullName>Judgment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent judgment of the lien.</description>
    <inlineHelpText>Judgment lien is in reference to</inlineHelpText>
    <label>Judgment</label>
    <referenceTo>Judgement__c</referenceTo>
    <relationshipLabel>Liens</relationshipLabel>
    <relationshipName>Liens</relationshipName>
    <type>Lookup</type>
</CustomField>