force-app/main/default/objects/Lien__c/fields/Lien_Date__c.field-meta.xml
<CustomField>
    <fullName>Lien_Date__c</fullName>
    <inlineHelpText>Date lien was recorded with the county</inlineHelpText>
    <label>Lien Date</label>
    <type>Date</type>
</CustomField>