force-app/main/default/objects/Lien__c/fields/Partially_Released__c.field-meta.xml
<CustomField>
    <fullName>Partially_Released__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partially Released</label>
    <type>Checkbox</type>
</CustomField>