force-app/main/default/objects/Lien__c/fields/Scope_of_Lien__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Lien__c</fullName>
    <inlineHelpText>Geographic region in which lien has validity or application</inlineHelpText>
    <label>Scope of Lien</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alameda County, California</fullName>
            </value>
            <value>
                <fullName>Alpine County, California</fullName>
            </value>
            <value>
                <fullName>Amador County, California</fullName>
            </value>
            <value>
                <fullName>Butte County, California</fullName>
            </value>
            <value>
                <fullName>Calaveras County, California</fullName>
            </value>
            <value>
                <fullName>Colusa County, California</fullName>
            </value>
            <value>
                <fullName>Contra Costa County, California</fullName>
            </value>
            <value>
                <fullName>Del Norte County, California</fullName>
            </value>
            <value>
                <fullName>El Dorado County, California</fullName>
            </value>
            <value>
                <fullName>Fresno County, California</fullName>
            </value>
            <value>
                <fullName>Glenn County, California</fullName>
            </value>
            <value>
                <fullName>Humboldt County, California</fullName>
            </value>
            <value>
                <fullName>Imperial County, California</fullName>
            </value>
            <value>
                <fullName>Inyo County, California</fullName>
            </value>
            <value>
                <fullName>Kern County, California</fullName>
            </value>
            <value>
                <fullName>Kings County, California</fullName>
            </value>
            <value>
                <fullName>Lake County, California</fullName>
            </value>
            <value>
                <fullName>Lassen County, California</fullName>
            </value>
            <value>
                <fullName>Los Angeles County, California</fullName>
            </value>
            <value>
                <fullName>Madera County, California</fullName>
            </value>
            <value>
                <fullName>Marin County, California</fullName>
            </value>
            <value>
                <fullName>Mariposa County, California</fullName>
            </value>
            <value>
                <fullName>Mendocino County, California</fullName>
            </value>
            <value>
                <fullName>Merced County, California</fullName>
            </value>
            <value>
                <fullName>Modoc County, California</fullName>
            </value>
            <value>
                <fullName>Mono County, California</fullName>
            </value>
            <value>
                <fullName>Monterey County, California</fullName>
            </value>
            <value>
                <fullName>Napa County, California</fullName>
            </value>
            <value>
                <fullName>Nevada County, California</fullName>
            </value>
            <value>
                <fullName>Orange County, California</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>