force-app/main/default/objects/Lien__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft Prepared</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Filed/In-Effect</fullName>
            </value>
            <value>
                <fullName>In Litigation</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Served</fullName>
            </value>
            <value>
                <fullName>Signed/Issued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>